--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm ci
 
       - name: Build project
-        run: npm run build && npm run export
+        run: npm run build
 
       - name: Deploy to deploy branch
         uses: JamesIves/github-pages-deploy-action@v4
